force-app/core/default/objects/XC_AFCC_Audit_Log__c/XC_AFCC_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>XC AFCC Audit Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>