force-app/core/default/objects/XC_AFCC_Audit_Log__c/fields/XC_AFCC_Action__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>