force-app/core/default/objects/XC_AFCC_Audit_Log__c/fields/XC_AFCC_Detail__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Detail__c</fullName>
    <label>Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>