force-app/core/default/objects/XC_AFCC_Audit_Log__c/fields/XC_AFCC_Environment_Mode__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Environment_Mode__c</fullName>
    <label>Environment Mode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>