force-app/core/default/objects/XC_AFCC_Audit_Log__c/fields/XC_AFCC_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>