force-app/core/default/objects/XC_AFCC_Audit_Log__c/fields/XC_AFCC_User__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_User__c</fullName>
    <label>User</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>XC_AFCC_AuditLogs</relationshipName>
    <type>Lookup</type>
</CustomField>